[gd_scene load_steps=23 format=3 uid="uid://4io1vg8e1cwi"]

[ext_resource type="Texture2D" uid="uid://dqn66wsdxt4hv" path="res://Sunny-land-files/Sunny-land-assets-files/PNG/spritesheets/frog-idle.png" id="1_04jnr"]
[ext_resource type="Texture2D" uid="uid://cxoq4mfrpsym5" path="res://Sunny-land-files/Sunny-land-assets-files/PNG/spritesheets/enemy-deadth.png" id="1_7y4t8"]
[ext_resource type="Script" path="res://Frog.gd" id="1_h1wq8"]
[ext_resource type="Texture2D" uid="uid://0vxg673nr403" path="res://Sunny-land-files/Sunny-land-assets-files/PNG/spritesheets/frog-jump.png" id="2_ux3b5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5r6w0"]
size = Vector2(21, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_pws8d"]
atlas = ExtResource("1_7y4t8")
region = Rect2(0, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwxo1"]
atlas = ExtResource("1_7y4t8")
region = Rect2(40, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_5c2fi"]
atlas = ExtResource("1_7y4t8")
region = Rect2(80, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_yh265"]
atlas = ExtResource("1_7y4t8")
region = Rect2(120, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_tq2td"]
atlas = ExtResource("1_7y4t8")
region = Rect2(160, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlwgb"]
atlas = ExtResource("1_7y4t8")
region = Rect2(200, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_he5m1"]
atlas = ExtResource("1_04jnr")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_txega"]
atlas = ExtResource("1_04jnr")
region = Rect2(35, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_25cdn"]
atlas = ExtResource("1_04jnr")
region = Rect2(70, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aekwx"]
atlas = ExtResource("1_04jnr")
region = Rect2(105, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ponwl"]
atlas = ExtResource("2_ux3b5")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oktuq"]
atlas = ExtResource("2_ux3b5")
region = Rect2(35, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_db74h"]
atlas = ExtResource("2_ux3b5")
region = Rect2(70, 0, 35, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_tj84u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pws8d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwxo1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5c2fi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yh265")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tq2td")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlwgb")
}],
"loop": false,
"name": &"Death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_he5m1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_txega")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_25cdn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aekwx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_he5m1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_he5m1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_he5m1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_he5m1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_he5m1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_he5m1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_he5m1")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ponwl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oktuq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_db74h")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_0pjvl"]
radius = 163.11

[sub_resource type="RectangleShape2D" id="RectangleShape2D_24n46"]
size = Vector2(21, 17.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qpeci"]
size = Vector2(25, 9.5)

[node name="Frog" type="CharacterBody2D"]
script = ExtResource("1_h1wq8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -5.5)
shape = SubResource("RectangleShape2D_5r6w0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -11)
sprite_frames = SubResource("SpriteFrames_tj84u")
animation = &"Idle"

[node name="PlayerDetection" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CircleShape2D_0pjvl")

[node name="PlayerDeath" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDeath"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_24n46")

[node name="PlayerCollison" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCollison"]
position = Vector2(-0.5, -4.25)
shape = SubResource("RectangleShape2D_qpeci")

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="PlayerDeath" to="." method="_on_player_death_body_entered"]
[connection signal="body_entered" from="PlayerCollison" to="." method="_on_player_collison_body_entered"]
